--- a/ScheduleOfLoan/WebContent/static/css/contents.css
+++ b/ScheduleOfLoan/WebContent/static/css/contents.css
@@ -1,12 +1,15 @@
-body{
+          body{
 				font-family:'Source Sans Pro',Helvetica,Arial,sans-serif;
 				font-weight:400;
 				padding:0;
 				margin:0;
 				height:auto;
-				min-height:100%;
-				background-color:#3c434e;
+				min-height:100%;			
 				font-size: 13px;
+				
+			}
+			.body-wrapper{
+				background-color:#3c434e;
 			}
 			*{
 				box-sizing:border-box;
@@ -25,11 +28,12 @@ body{
 				bottom:0px;
 				left:0px;
 				right:0px;
+				
 			}
 			.main-header{
 				position:relative;
 				width:100%;
-				height:40px;
+				height:60px;
 				background-color:white;
 				border-bottom:2px solid red;
 			}
@@ -106,27 +110,29 @@ body{
 				min-width:916px;
 				min-height:550px;
 				
+				
 			}
 			.navbar-right{
-				text-align:right;
 				margin:0px;
-				padding:0px;
+				padding:0;
 				float:right;
 				width:70%;
+				height: 100%;
+				list-style:none;
 			}
 			.navbar-right>li{
-				list-style:none;
-				display:inline-block;
-				position:relative;
-				margin:0px;
-				padding:0px;
-				height:100%;
+				display: inline-block;
+			    position: relative;
+			    float: right;
+			    margin: 0px;
+			    padding: 0px;
+			    height: 100%;
 			}
 			.navbar-right li a{
-				padding:4px 15px 4px;
-				line-height: 30px;
-				display:block;
-				color: #515356!important;
+				padding: 23px 15px 15px;
+			    display: block;
+			    color: #515356!important;
+			    height: 100%;
 			}
 			.navbar-right li a img.profile{
 				border-radius: 50%;
@@ -141,7 +147,7 @@ body{
 				padding: 2px 5px;
 				position: absolute;
 				right: 1px;
-				top: 3px;
+				top: 15px;
 			}
 			.navbar-right li a i {
 				font-size: 15px;
@@ -311,6 +317,9 @@ body{
 			}
 			.border-blue{
 				border-top:3px solid blue;
+			}
+			.border-green{
+				border-top:3px solid green;
 			}
 			.content-box-head{
 				height:auto;
